--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ words.txt
 
 .env
 .vscode
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
