--- a/package.json
+++ b/package.json
@@ -18,7 +18,19 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "migration:run": "npm run typeorm -- migration:run -d data-source.ts",
+    "serve-migration:run": "npm run typeorm -- migration:run -d ./dist/data-source.js",
+    "generate:migration": "npm run typeorm -- migration:generate -d data-source.ts ./migrations",
+    "db:create": "node ./dist/database/scripts db:create",
+    "db:migrate": "npm run typeorm migration:run -- -d ./data-source.ts",
+    "db:migrate:revert": "npm run typeorm -- -d ./data-source.ts migration:revert",
+    "db:migration:create": "node ./dist/database/scripts db:migration:create",
+    "db:drop": "node ./dist/database/scripts db:drop",
+    "db:fresh": "npm run db:drop && npm run db:create && npm run db:migrate",
+    "db:serve-fresh": "npm run db:drop && npm run db:create && npm run serve-migration:run"
+
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -38,6 +50,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
+    "pgtools": "^1.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
