--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "npm i && npm run deploy",
-    "deploy": "npm i nest && npm run build && npm run start:prod",
+    "deploy": "npm i nest && npm i && npm run build && npm run start:prod",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -43,6 +43,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "handlebars": "^4.7.8",
+    "nest": "^0.1.6",
     "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
